--- a/VRChat/18/1156018.html
+++ b/VRChat/18/1156018.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fWEiejW1/+zlia/WTsNB+0KfXnyx9RAJiyJTEaVw2yg="></script>
+    "Z9c3xrtWt67+PoZ2RDAAqHEdB4kvYN++hn2SLs/1GlQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル　笠＆顎紐","description":"笠です。\n\n内容物\n\nポリゴン数　笠　286\n　　　　　　顎紐　732\n\nテクスチャ　png\n\n形式　　　　fbx形式\n　　　　　　unitypackage形式\n\n\n利用規約\n本データをダウンロードした時点で本利用規約に同意したとみなします\n\n・転売、再配布などの禁止です(改変後も含む)\n・ゲーム内データ用に、容易に取り出せない形にしての再配布は可能です\n・MODなどによる再配布は禁止です\n・商用、非商用問わず利用可能です\n・改変は自由です\n・宗教、政治関係には使用しないでください\n・規約は商品紹介文の最新のものが適用されます\n・規約は予定なく変更することがあります\n・本データを利用して発生したトラブル等は、作者は一切責任を負いません\n\n最終更新日：2019年1月1日","url":"https://booth.pm/ja/items/1156018","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/799ec00b-4aba-450f-99ff-d5cb56f1cf41/i/1156018/49d9fec7-f050-46a3-8f25-1e8a7448c05a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fWEiejW1/+zlia/WTsNB+0KfXnyx9RAJiyJTEaVw2yg="></script>
+    nonce="Z9c3xrtWt67+PoZ2RDAAqHEdB4kvYN++hn2SLs/1GlQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1156018/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               222
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1156018/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               222
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
