updated at: 2023-04-25 17:35, MCF 腕部装着型生活補助デバイスRip-Girl 3500 - Miyakon Custom Factory - BOOTH

--- a/VRChat/79/1152579.html
+++ b/VRChat/79/1152579.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iZXhay8k2jhPSnDTSddYzLmJosPDPW4bsXqTawZ+0JQ="></script>
+    "8MmiKiU92oTem4Rfx7FWit6IWcnq8CKzVmLg4kuJusA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF 腕部装着型生活補助デバイスRip-Girl 3500","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\nロングセラーのRip-Girlシリーズにニューモデルが登場！\nその名もRIP Girl3500！！従来の拡張性はそのままにより洗練されたデザインへと進化しました！！物理ボタンの追加や大画面化。さらに強度の上昇により従来機より多くの核爆発に耐えられます！！※お客様の生命を脅かす危険性があります。実行する場合は万全の注意を。\nさあ！仮想空間のウェイストランドを、新しくなったRIP Girlと共に歩みましょう！！\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\n\nポリ数\nRIP Girl3500:1678\n\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1152579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1152579/f04d2610-da37-49f1-a799-542f92e75c3f_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iZXhay8k2jhPSnDTSddYzLmJosPDPW4bsXqTawZ+0JQ="></script>
+    nonce="8MmiKiU92oTem4Rfx7FWit6IWcnq8CKzVmLg4kuJusA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,10 +162,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1152579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              536
+                              537
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1152579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              536
+                              537
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
