--- a/VRChat/21/1157121.html
+++ b/VRChat/21/1157121.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oAKEGmkalgz/MryPwI9I4onQnpClu3jjMGwxlMDKiuU="></script>
+    "AoyVEmp9TbpitaR7uoG8oYjs19hvH/lkCoKwMgM6ru8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat対応アバターモデル 『テレハンドラ』","description":"「KMN-011 テレハンドラ」 ver.1.0\n\nモデリング　：　サンフィッシュくまの（@megakumadori）\n\n・小柄ながらパワフルなロボ娘モデルです。\n・第三者の収益化動画や配信などに映り込む際の制限などはありません。\n・FBXファイルとテクスチャファイル、UnityPackageにはマテリアルを設定したモデルとVRChatSDKがインポートされた\n\n【免責事項 Disclaimer】\n\n・本データの利用において、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n-Take full responsibility for your actions.\n-Follow  the most recent rules.\n\n【使用条件 Rules】\n\n・本データの改造利用には制限を設けませんが、データの再配布(アバターペデスタルの配置及びPublicアバター化も含む)は禁止とします。\n　ゲーム等の用途としてデータが梱包されるのは問題ありません。\n・商用利用、アダルトコンテンツの利用も問題ありません。\n\n-You can modify this data.(Do not redistribute this data.)\n\n\n・UnityのHumanoid規格にセットアップしてありますが、利用プラットフォームの制限はありません。\n　（VRアバター、VTuber、ゲーム利用等）\n・第三者の収益動画・配信等に映り込むことも問題ありません。\n\n-You can use this in any platform.(This data has been set up for Unity.)\n\n・VRMファイルへ変換し、VRM対応アプリケーションで利用することも可能ですが、そのVRMデータの使用許諾は購入者様のみに留めおいてください。(Only Author)\nVRMファイルはAuthor入力欄が存在しますが、その部分は購入者様の名義で構いません。\n\n\n【内容物 Contents】\n\n・TeleHandler.fbx\nFBXファイル版モデルデータです。\n\n・Texフォルダ\nテクスチャファイルおよびテクスチャ改変用のPSDファイルが入っています。\nPSDファイルはそれぞれ、頭部テクスチャ(PBRマテリアル用ベースカラー)・頭部テクスチャ（陰影付き）・胴体テクスチャ(PBRマテリアル用ベースカラー)・胴体テクスチャ（陰影付き）となっています。\n\n\n\n\n本モデルのセットアップ済みパッケージにはArktoonシェーダー(opaque)ver.1.0のデータが同梱されています。\n本シェーダーを提供してくださった(@synqark)様に深く御礼申し上げます。\n\n\n【連絡先 Contact】\n何か連絡事項がありましたら。\n\nTwitter : サンフィッシュくまの(@megakumadori)\nhttps://twitter.com/megakumadori\n\nまでリプライかDMをお願いします。\n\n\n(2018 12/31)販売開始\n","url":"https://booth.pm/ja/items/1157121","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2400"},"image":"https://booth.pximg.net/c/620x620/4cfe502f-f7f0-4110-8040-11bd7e240c28/i/1157121/1e185f75-ea2d-475a-903b-6ef462cbbd95_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oAKEGmkalgz/MryPwI9I4onQnpClu3jjMGwxlMDKiuU="></script>
+    nonce="AoyVEmp9TbpitaR7uoG8oYjs19hvH/lkCoKwMgM6ru8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1157121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               374
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1157121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               374
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
