updated at: 2023-04-25 17:36, 2019の獣 - kasabanet - BOOTH

--- a/VRChat/55/1156955.html
+++ b/VRChat/55/1156955.html
@@ -71,9 +71,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XWPKyymTVs8HuiMpGs+Qm91JbPb3ZRz1npLpf2+dZL8="></script>
+    "NkdJj3YzXgVrCCfI/eWFKu2n3JXgunSy2H+4CmDNfwI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"2019の獣","description":"もはや2018年など過去なのさ・・・","url":"https://booth.pm/ja/items/1156955","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f8f894d7-17c2-4071-8376-3a45084e5b08/i/1156955/3ed3b829-cf70-4d44-92f6-411ce22cec6e_base_resized.jpg"}
     </script>
@@ -87,7 +87,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XWPKyymTVs8HuiMpGs+Qm91JbPb3ZRz1npLpf2+dZL8="></script>
+    nonce="NkdJj3YzXgVrCCfI/eWFKu2n3JXgunSy2H+4CmDNfwI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -111,6 +111,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1156955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1156955/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
