--- a/VRChat/46/1156946.html
+++ b/VRChat/46/1156946.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2sg0WfJoUSvLmBZxqq16mXCHrPh/OVrOWObY+OPyQqM="></script>
+    "69P+Klm/W79KDTUqfrcPnvarPRzsjLNnkHmtt/T9FD0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"梓弓","description":"弓の弦・矢の結びにボーンが入っています\n\nテクスチャ・FBXファイルが入ってます","url":"https://booth.pm/ja/items/1156946","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ebffffd0-532e-400b-afe2-d3306d212fc5/i/1156946/f19a744c-e1a2-4a88-baa6-f788853ce1df_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2sg0WfJoUSvLmBZxqq16mXCHrPh/OVrOWObY+OPyQqM="></script>
+    nonce="69P+Klm/W79KDTUqfrcPnvarPRzsjLNnkHmtt/T9FD0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1156946/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1156946/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
