--- a/VRChat/47/1156347.html
+++ b/VRChat/47/1156347.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "R/4UIfzUt2xBbAv8KDV7pje0A294l5+y+1jMPeMLcDQ="></script>
+    "KTBtkxeouFz+tSDh8THIEtbHzV1jo5yi49TV09Gxdcg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【UnityPackage】スチームパンク風ハット","description":"シンプルな？スチームパンク風ハットです。\n歯車とかをつかっちゃうとどうしてもポリゴン数が多くなってしまいますね。\nテクスチャーはスタンダードシェーダー向けに書き出したもの（3枚）と2D Viewで書き出したもの（1枚）があり、Prefabをそれぞれ作っています。\n\n【仕様】\nポリゴン 11796\nマテリアル　1\nテクスチャー　3(1)\n\n【配布形式】\nUnityPackage\n\n【利用規約】\n商用利用、改変は可能です。\n二次配布、自作発言は禁止します。\nこの商品を利用したことで発生するトラブル等に関して責任を負いません。","url":"https://booth.pm/ja/items/1156347","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1156347/1386c78b-40da-47b2-a23b-a2e41dec6782_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="R/4UIfzUt2xBbAv8KDV7pje0A294l5+y+1jMPeMLcDQ="></script>
+    nonce="KTBtkxeouFz+tSDh8THIEtbHzV1jo5yi49TV09Gxdcg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1156347/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              120
+                              121
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1156347/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              120
+                              121
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
