--- a/VRChat/22/1156022.html
+++ b/VRChat/22/1156022.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pDJ6euZ/x6VE34fN63QJwKpE5CTF35Rf8V9yd2Jv6Pg="></script>
+    "GUDdkds3SzSasSEJ9mpQnPvT3QMBFRtriJlspsr9dDk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC等想定・着せ替え改変用サイバー巫女服モデル","description":"□VRChatアバター等向け改変用サイバー巫女服モデル\n14719△ポリゴン、Humanoid設定・スキニング済み。\n\n\n□内容\n・2019CyberMikohuku.unitypackage　本体\n\n・2019CyberMikohuku.fbx　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートして下さい。\n\nunitypackage版をインポートする際は、UnityChanToonShader2.0.5を予めプロジェクトにインポートした上で\n本アバターのunitypackageをインポートして下さい。\nDynamicBoneを使用する場合は同様に事前にインポートを行って下さい。\n\n□改変について\n\nご自由にどうぞ。基本的には、Headボーンの下に頭や髪などを設置すればそのまま使えます。\n複雑な改変を行いたい場合は各種モデリングソフトにfbxをインポートして下さい。\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□更新履歴\n\n2018/12/31　販売開始しました。\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nVRChat：AP1895\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1156022","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1231"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1156022/e4737b8d-9738-4aa4-8fc4-58aa9219010b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pDJ6euZ/x6VE34fN63QJwKpE5CTF35Rf8V9yd2Jv6Pg="></script>
+    nonce="GUDdkds3SzSasSEJ9mpQnPvT3QMBFRtriJlspsr9dDk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1156022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               272
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1156022/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               272
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
