updated at: 2023-04-25 17:37, [Free]PAPShader - 電脳機巧技師団 購買部 - BOOTH

--- a/VRChat/84/1154484.html
+++ b/VRChat/84/1154484.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8LXyM9g0NBwS0Z2y7a+YIZNgVDEZORHXtQ1kwv9yWnw="></script>
+    "jyAAA3w+QymrWIATBl3MszBE9YssHRIO413s/Xru2b8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Free]PAPShader","description":"B○シリーズのZ○MBIEモードに登場する、PA○K A PUN○Hで武器を強化した時のようなシェーダです。付属テクスチャ3枚でどんな武器でも強化できます。","url":"https://booth.pm/ja/items/1154484","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00473482-a5a6-406c-b599-7607b9c789aa/i/1154484/f14c2ec7-7a6e-4627-a956-e23a692a8408_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8LXyM9g0NBwS0Z2y7a+YIZNgVDEZORHXtQ1kwv9yWnw="></script>
+    nonce="jyAAA3w+QymrWIATBl3MszBE9YssHRIO413s/Xru2b8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1154484/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1154484/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
