updated at: 2023-04-25 17:38, しめ縄飾り Ver1.1 - お休みさんの作ったもの - BOOTH

--- a/VRChat/44/1154444.html
+++ b/VRChat/44/1154444.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2rNUGRavRGxZWb4dOKH3bYhpPoSlGwCd9np4LA3iu+Q="></script>
+    "D3CX7sNtdusm2mRsOKc6zb7Zig+d7JygSjZIkcBeh9M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"しめ縄飾り Ver1.1","description":"年越しの際に飾られるしめ縄をモチーフにした飾りです。(7217ポリゴン,マテリアルx1)\nアバターのアクセサリやワールドの飾りとして使うことを想定しています。\n\nアクセサリ用に飾り部分だけのものを同梱しました。\n\nUnity及びVRChatでの使用を想定していますが、fbxファイルおよびテクスチャファイルを同梱していますので、他の3Dモデルやゲームソフト等に組み込んで使用することも可能です。\nStandardシェーダーでセットアップしていますが、陰影などもある程度テクスチャに焼き込んでいますので、任意のトゥーンシェーダなどで使用することもできます。","url":"https://booth.pm/ja/items/1154444","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64255878-1532-4d6c-abdb-a9cf35ee4a39/i/1154444/96baba1d-77cd-429a-b5b9-b046e030ad02_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2rNUGRavRGxZWb4dOKH3bYhpPoSlGwCd9np4LA3iu+Q="></script>
+    nonce="D3CX7sNtdusm2mRsOKc6zb7Zig+d7JygSjZIkcBeh9M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1154444/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1154444/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
