updated at: 2023-04-25 17:38, 【VRC向け】サイバーサングラス - えいてる屋 - BOOTH

--- a/VRChat/35/1153735.html
+++ b/VRChat/35/1153735.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eJ0ikSdTmxRsDxfNHkwM2sY7ynRyy2freJbkN8Idgx4="></script>
+    "afCHGXD530rNdDWWk9hvKgBTwvuSmrcI0xoHQr+I4zw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC向け】サイバーサングラス","description":"◆VRChat向け３Dモデル　サイバーサングラス◆\n\nAnimationによる表示オブジェクトの切り替えで簡単に威圧的文言を表示できるサイバーサングラスです。言葉の通じぬ危険なアトモスフィアを重点しよう。\n\n「Unityを理解しない」人向けに実際詳しい実装方法解説付き。\n\n◇収録威圧的表示文言◇\n\n・Unityを理解しない\n・kawaiiのライセンス\n・日本語がフルサポートされていない\n・囲んでmoveで叩く\n・実際安い\n・明日もVRC\n・ナムアミダブツ\n・ケモミミ十三段\n・キャットが救い\n・オキモチ重点\n・猥褻が一切ない\n・REBOOT\n\n元ネタ:Ninja Slayer/ニンジャスレイヤー Twitter @NJSLYR","url":"https://booth.pm/ja/items/1153735","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/75409dcf-e181-4290-a053-65156c11a7c3/i/1153735/c35a9a05-ac22-4c10-a6e6-c84708586374_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eJ0ikSdTmxRsDxfNHkwM2sY7ynRyy2freJbkN8Idgx4="></script>
+    nonce="afCHGXD530rNdDWWk9hvKgBTwvuSmrcI0xoHQr+I4zw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1153735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1153735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
