updated at: 2023-04-25 17:39, AF製TacticalLight - 迷宮図書館購買部 - BOOTH

--- a/VRChat/79/1153579.html
+++ b/VRChat/79/1153579.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SvhhUra1dkjhjh4iLXvnLbRThC4wRBq72Tei4m5gtRw="></script>
+    "0j+Esrl9SiKQ3uoxawsO2SjvtupbP+kky7vyEKt4amc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AF製TacticalLight","description":"工房「The garden of Ash」様で販売している『Sports Assult Rifle \"GA-01A1\"（民間向けスポーツライフル）』向けに作成されたタクティカルライトです。\n\nSpotlight設定済みのPrefab同梱で、そのまま取り付けることができます。","url":"https://booth.pm/ja/items/1153579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1153579/f8b196a0-ad69-440e-841e-1275e8a91652_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SvhhUra1dkjhjh4iLXvnLbRThC4wRBq72Tei4m5gtRw="></script>
+    nonce="0j+Esrl9SiKQ3uoxawsO2SjvtupbP+kky7vyEKt4amc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1153579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1153579/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
