updated at: 2023-04-25 17:39, 【VRMのみ】NEKO FANTASY いのしし - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/50/1153050.html
+++ b/VRChat/50/1153050.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T7613J/4fHofES9h/lL3dJXyRCjplLN7yriAX3xuiVY="></script>
+    "NVK3pYg1Zs3ah7JxuhaEnGMWeZ4ne1VntsXHsVlISrY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY いのしし","description":"VRMアバター　「NEKO FANTASY いのしし」\n\nポリゴン数：4706\n\nネコアバターシリーズのいのししの着ぐるみを着たバージョンです。\n\n赤のマフラーのチャトラちゃんと\n緑のマフラーのアメショちゃんの２つ入っていますので\nお好きな方を使ってください。\n\n＜更新履歴＞\n2022.01.31　アウトライン、視点位置の変更をしました。\n2021.11.01　VRChat版を販売終了。VRMのみになりました。\n2021.10.22　VRMファイルに色違いのアメショちゃんを追加。\n2020.04.29　VRChat用のunitypackageをUnity2018に対応。シェーダーをUnlitWFに変更しました。\n2020.03.25\n・VRMのいのししくんのマフラーの文字が「いのしし」に変わりました。\n・VRMのZIPにVRM設定変更用unitypackageを追加しました。\n2019.06.04\n・しっぽとお尻のウェイト、テクスチャを変更しました。\n・クチのアウトラインがきれいに出るように修正しました。\n・unitypackageにOculus Quest用設定を追加しました。\n\n\n\n\n","url":"https://booth.pm/ja/items/1153050","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1153050/3d6693b0-9c2f-4a06-ad1f-771552d42341_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T7613J/4fHofES9h/lL3dJXyRCjplLN7yriAX3xuiVY="></script>
+    nonce="NVK3pYg1Zs3ah7JxuhaEnGMWeZ4ne1VntsXHsVlISrY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1153050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1153050/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               167
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
