updated at: 2023-04-25 17:39, 即売会の紙袋 - 『旅の十字路』 - BOOTH

--- a/VRChat/28/1153028.html
+++ b/VRChat/28/1153028.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KkSAqf0uIGhPAFtIjOjY3W82A93OP0tXXxResrFDbQc="></script>
+    "59jgR6dNEfZzgxtsahWUT8bJKZcOTFy7Q874Ugz0MSE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"即売会の紙袋","description":"[3D小物]即売会の紙袋\n\nサンプルに従って画像を2枚張り付けるだけで簡単にあなただけの展示会風な紙袋が作れます。\n\n「コ〇ケ楽しかったよ！」\nそう言って戦利品片手にVRChatに凱旋するときに使うと良い感じです。\n「ああっ、コ〇ケ行きたかった…」\n祭りの後の高揚感をわずかでも味わいたい悲しみのアイテムとしても利用できそうですね。\n\n\n■同梱物(無料・有料で内容物は同じです)\ndojinevent_paperbag.fbx\n作成サンプル画像\npsd(テクスチャ編集用)","url":"https://booth.pm/ja/items/1153028","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/a9382ad0-0431-4829-85ba-4973233e956b/i/1153028/975d5155-d1c0-4581-9be6-38c19da3abca_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KkSAqf0uIGhPAFtIjOjY3W82A93OP0tXXxResrFDbQc="></script>
+    nonce="59jgR6dNEfZzgxtsahWUT8bJKZcOTFy7Q874Ugz0MSE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1153028/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1153028/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
